Fix the WhitespaceSensitivity feature for reparsing.

This never looked at removed text ...
BUG:299836